fix unwanted scrollbars

--- a/src/widget.resource.css
+++ b/src/widget.resource.css
@@ -16,7 +16,6 @@
 
 .resource-value {
     width: 100%;
-    overflow: auto;
 }
 
 .resource-edit-input {
